# mood

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
misc/: mood_wip.ipynb  news_mood.ipynb  oa_embeddings_sentiment_models.pickle  trump_zelenskyy_moods.ipynb
mood/: __init__.py  data_sources.py  dataset_makers.py  learn_sentiments.py  model_analysis.py  mood_modeling.py  sentiment.py  tools.py  util.py
mood/data/: financial_news_search_words.json
mood/examples/: __init__.py
mood/scrap/: historical_headlines.py
mood/scripts/: __init__.py  financial_news_searches.py
