[metadata]
name = mood
version = 0.0.7
url = https://github.com/infinvest/mood
platforms = any
description_file = README.md
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		finance
		trading
		sentiment analysis
		web scraping
		nlp
		text analysis
display_name = mood

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	scoopy
	beautifulsoup4
	requests
	oa
	config2py
	dol
	i2
	argh

[options.entry_points]
console_scripts =
    financial-news-search = mood.scripts.financial_news_searches:main